--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -15,7 +15,6 @@ jobs:
         id: snake-gif
         with:
           github_user_name: ClaudioGriesang
-
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
@@ -31,3 +30,11 @@ Terms
 Privacy
 Security
 Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+
